--- a/api_exercise/package.json
+++ b/api_exercise/package.json
@@ -9,6 +9,9 @@
   "author": "Jason Lo",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.0"
+    "body-parser": "^1.15.0",
+    "ejs": "^2.4.1",
+    "express": "^4.13.4",
+    "request": "^2.69.0"
   }
 }
